src/main/java/com/example/cafejun/advise/error/InvalidParameterException.java
package com.example.cafejun.advise.error;

import com.example.cafejun.advise.payload.ErrorCode;
import org.springframework.validation.Errors;
import org.springframework.validation.FieldError;

import java.util.List;

public class InvalidParameterException extends DefaultException {
    private final Errors errors;

    public InvalidParameterException(Errors errors){
        super(ErrorCode.INVALID_PARAMETER);
        this.errors = errors;
    }

    public List<FieldError> getFieldErrors() {
        return errors.getFieldErrors();
    }
}
